{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 27,
  "lineage": "cae9567d-225f-c96f-681a-ef1676782026",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TerraForm_Managed_Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad704c126371a549",
            "arn": "arn:aws:ec2:ap-south-1:149417358945:instance/i-0bc183fa228735f67",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc183fa228735f67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slave1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023ca4d0417e078b2",
            "private_dns": "ip-192-168-1-110.ap-south-1.compute.internal",
            "private_ip": "192.168.1.110",
            "public_dns": "ec2-65-2-29-133.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.29.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ab4c1db07e552bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d23d5b76c211026",
            "tags": {
              "Environment": "production",
              "Name": "K8S_Master_Node"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "K8S_Master_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d538f825262075a4"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad704c126371a549",
            "arn": "arn:aws:ec2:ap-south-1:149417358945:instance/i-053ae477de84e42d7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053ae477de84e42d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slave1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5f67ac5694ae4b6",
            "private_dns": "ip-192-168-1-128.ap-south-1.compute.internal",
            "private_ip": "192.168.1.128",
            "public_dns": "ec2-13-126-219-13.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.219.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061327d3552a21f05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d23d5b76c211026",
            "tags": {
              "Environment": "production",
              "Name": "K8S_Slave_Node1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "K8S_Slave_Node1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d538f825262075a4"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad704c126371a549",
            "arn": "arn:aws:ec2:ap-south-1:149417358945:instance/i-00aebba2f1a0e8286",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00aebba2f1a0e8286",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slave1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c57f60b20ce6b385",
            "private_dns": "ip-192-168-1-149.ap-south-1.compute.internal",
            "private_ip": "192.168.1.149",
            "public_dns": "ec2-13-233-225-120.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.225.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013e7d8a32b7df70b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d23d5b76c211026",
            "tags": {
              "Environment": "production",
              "Name": "K8S_Slave_Node2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "K8S_Slave_Node2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d538f825262075a4"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc",
            "aws_security_group.TerraformSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:internet-gateway/igw-074b4006838d3211b",
            "id": "igw-074b4006838d3211b",
            "owner_id": "149417358945",
            "tags": {
              "Name": "Terraform_IG"
            },
            "tags_all": {
              "Name": "Terraform_IG"
            },
            "vpc_id": "vpc-01e49f2c5be9c5158"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:route-table/rtb-00227b351f22796d6",
            "id": "rtb-00227b351f22796d6",
            "owner_id": "149417358945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074b4006838d3211b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformRouteTable"
            },
            "tags_all": {
              "Name": "TerraformRouteTable"
            },
            "vpc_id": "vpc-01e49f2c5be9c5158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e8e88a986930dd",
            "route_table_id": "rtb-00227b351f22796d6",
            "subnet_id": "subnet-09d23d5b76c211026"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TerraformSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:security-group/sg-0d538f825262075a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d538f825262075a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "TerraformSG",
            "name_prefix": "",
            "owner_id": "149417358945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "TerraformSG"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "TerraformSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e49f2c5be9c5158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1_Lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:subnet/subnet-09d23d5b76c211026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-09d23d5b76c211026",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149417358945",
            "tags": {
              "Environment": "production",
              "Name": "TerraformPublicSubnetLab1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "TerraformPublicSubnetLab1"
            },
            "vpc_id": "vpc-01e49f2c5be9c5158"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149417358945:vpc/vpc-01e49f2c5be9c5158",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01a590218e7ddf38c",
            "default_route_table_id": "rtb-047a5d30e9efa287a",
            "default_security_group_id": "sg-07bec27aa77e788be",
            "dhcp_options_id": "dopt-ceee21a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01e49f2c5be9c5158",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-047a5d30e9efa287a",
            "owner_id": "149417358945",
            "tags": {
              "Environment": "production",
              "Name": "TerraformVpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "TerraformVpc"
            }
          }
        }
      ]
    }
  ]
}